--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -23,3 +23,27 @@ jobs:
         env:
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Java CI with Maven
+
+          on:
+            push:
+              branches: [ $default-branch ]
+            pull_request:
+              branches: [ $default-branch ]
+
+          jobs:
+            build:
+
+              runs-on: ubuntu-latest
+
+              steps:
+              - uses: actions/checkout@v2
+              - name: Set up JDK 1.8
+                uses: actions/setup-java@v1
+                with:
+                  java-version: 1.8
+              - name: Build with Maven
+                run: mvn -B package --file pom.xml
+          
+          
