--- a/TP2-AlgoIII/pom.xml
+++ b/TP2-AlgoIII/pom.xml
@@ -53,7 +53,7 @@
       </plugin><plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
-      <version>${maven-surefire-version}</version>
+      <version>3.0.0-M5</version>
     </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
